--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>My Project</title>
+	<title>Food Project</title>
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
 
-	<h1>Hello World!</h1>
-	<p>testing</p>
-
+	<script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
 	<script src="public/scripts/main.js"></script>
 </body>
 </html>
+
+<!-- Customer enters their required search parameters (ingredients, course type, cusisine type, dietary restrictions) -->
+	<!-- Example of a search for chicken and broccoli / Main dish / Italian / No dietary restriction -->
+		<!-- Do an API call for all recipes with chicken and broccoli -->
+		<!-- Then filter the results based on the other criteria - starting with course type - then cuisine type - then dietary restrcitions -->
+<!-- The data is pulled from the API and displayed onto the page in a list -->
+	<!-- The filtered results will then be broken down into individual recipes - displaying an image of the dish, the name of the dish and a description of it -->
+<!-- The recipes will be clickable to take them to a full view of them -->
+	<!-- The recipes will be opened in a new tab -->
