--- a/index.html
+++ b/index.html
@@ -9,9 +9,126 @@
 </head>
 <body>
 
-	<h1>Hello World!</h1>
-	<p>testing</p>
+	<nav>
+		<form action="">
+			<ul>
+				<li><input type="text" name="search" placeholder="Search for recipes"></li>
+				<li>course type
+					<ul>
+						<li>appetizers</li>
+						<li>breads</li>
+						<li>breakfast and brunch</li>
+						<li>beverages</li>
+						<li>cocktails</li>
+						<li>condiments and sauces</li>
+						<li>desserts</li>
+						<li>lunch</li>
+						<li>main dishes</li>
+						<li>salads</li>
+						<li>side dishes</li>
+						<li>snacks</li>
+						<li>soups</li>
+					</ul>
+				</li>
+				<li>cuisine type
+					<ul>
+						<li><input type="checkbox" name="american" value="american">american</li>
+						<li><input type="checkbox" name="barbecue" value="">barbecue</li>
+						<li><input type="checkbox" name="cajun & creole" value="">cajun & creole</li>
+						<li><input type="checkbox" name="chinese" value="">chinese</li>
+						<li><input type="checkbox" name="cuban" value="">cuban</li>
+						<li><input type="checkbox" name="english" value="">english</li>
+						<li><input type="checkbox" name="french" value="">french</li>
+						<li><input type="checkbox" name="german" value="">german</li>
+						<li><input type="checkbox" name="greek" value="">greek</li>
+						<li><input type="checkbox" name="hawaiian" value="">hawaiian</li>
+						<li><input type="checkbox" name="hungarian" value="">hungarian</li>
+						<li><input type="checkbox" name="indian" value="">indian</li>
+						<li><input type="checkbox" name="irish" value="">irish</li>
+						<li><input type="checkbox" name="italian" value="">italian</li>
+						<li><input type="checkbox" name="japanese" value="">japanese</li>
+						<li><input type="checkbox" name="kid-friendly" value="">kid-friendly</li>
+						<li><input type="checkbox" name="mediterranean" value="">mediterranean</li>
+						<li><input type="checkbox" name="mexican" value="">mexican</li>
+						<li><input type="checkbox" name="moroccan" value="">moroccan</li>
+						<li><input type="checkbox" name="portuguese" value="">portuguese</li>
+						<li><input type="checkbox" name="spanish" value="">spanish</li>
+						<li><input type="checkbox" name="southern & soul" value="">southern & soul</li>
+						<li><input type="checkbox" name="southwestern" value="">southwestern</li>
+						<li><input type="checkbox" name="swedish" value="">swedish</li>
+						<li><input type="checkbox" name="thai" value="">thai</li>
+					</ul>
+				</li>
+				<li>dietary restrictions
+					<ul>
+						<li>lacto vegetarian</li>
+						<li>ovo vegetarian</li>
+						<li>pescetarian</li>
+						<li>vegan</li>
+						<li>vegetarian</li>
+					</ul>
+				</li>
+				<li><button>Submit</button></li>
+			</ul>
 
+			 <!-- cuisine type - checklist -->
+			 <!-- dietary restrictions - dropdown menu-->
+		</form>
+	</nav>
+
+	<script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
 	<script src="public/scripts/main.js"></script>
 </body>
 </html>
+
+
+
+<!-- 
+	American, 
+	 Asian,
+	 Barbecue,
+	 Cajun & Creole,
+	 chinese
+	 Cuban
+	 English,
+	 French
+	 German,
+	 Greek,
+	 Hawaiin
+	 Hungarian
+	Indian, 
+	 Irish
+	 Italian
+	 Japanese
+	Mediterranean,
+	 Mexican
+	 Moroccan
+	 Portugese
+	 Spanish
+	 Southern & Soul Food, 
+	 Southwestern,
+	swedish
+	Thai
+
+
+
+	, 
+
+
+	Dietary: 
+	Lacto vegetarian, 
+	Ovo vegetarian, 
+	Pescetarian, 
+	Vegan, 
+	Vegetarian 
+	
+	
+
+
+Course Type: Main Dishes, Desserts, Side Dishes, Lunch and Snacks, Appetizers, Salads, Breads, Breakfast and Brunch, Soups, Beverages, Condiments and Sauces, Cocktails 
+
+Cuisine Type: American, Italian, Asian, Mexican, Southern & Soul Food, French, Southwestern, Barbecue, Indian, Chinese, Cajun & Creole, English, Mediterranean, Greek, Spanish, German, Thai, Moroccan, Irish, Japanese, Cuban, Hawaiin, Swedish, Hungarian, Portugese
+
+Dietary: Lacto vegetarian, Ovo vegetarian, Pescetarian, Vegan, Vegetarian
+
+-->
