--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
 				</li>
 				<li class="cuisine-type">cuisine type
 					<ul class="sub-menu">
-						<li><input type="checkbox" name="american" value="cuisine-american">american</li>
-						<li><input type="checkbox" name="barbecue" value="cuisine-barbecue-bbq">barbecue</li>
-						<li><input type="checkbox" name="cajun & creole" value="cuisine-cajun">cajun & creole</li>
-						<li><input type="checkbox" name="chinese" value="cuisine-chinese">chinese</li>
-						<li><input type="checkbox" name="cuban" value="cuisine-cuban">cuban</li>
-						<li><input type="checkbox" name="english" value="cuisine-english">english</li>
-						<li><input type="checkbox" name="french" value="cuisine-french">french</li>
-						<li><input type="checkbox" name="german" value="cuisine-german">german</li>
-						<li><input type="checkbox" name="greek" value="cuisine-greek">greek</li>
-						<li><input type="checkbox" name="hawaiian" value="cuisine-hawaiian">hawaiian</li>
-						<li><input type="checkbox" name="hungarian" value="cuisine-hungarian">hungarian</li>
-						<li><input type="checkbox" name="indian" value="cuisine-indian">indian</li>
-						<li><input type="checkbox" name="irish" value="cuisine-irish">irish</li>
-						<li><input type="checkbox" name="italian" value="cuisine-italian">italian</li>
-						<li><input type="checkbox" name="japanese" value="cuisine-japanese">japanese</li>
-						<li><input type="checkbox" name="kid-friendly" value="cuisine-kid-friendly">kid-friendly</li>
-						<li><input type="checkbox" name="mediterranean" value="cuisine-mediterranean">mediterranean</li>
-						<li><input type="checkbox" name="mexican" value="cuisine-mexican">mexican</li>
-						<li><input type="checkbox" name="moroccan" value="cuisine-moroccan">moroccan</li>
-						<li><input type="checkbox" name="portuguese" value="cuisine-portuguese">portuguese</li>
-						<li><input type="checkbox" name="spanish" value="cuisine-spanish">spanish</li>
-						<li><input type="checkbox" name="southern & soul" value="cuisine-southern">southern & soul</li>
-						<li><input type="checkbox" name="southwestern" value="cuisine-southwstern">southwestern</li>
-						<li><input type="checkbox" name="swedish" value="cuisine-swedish">swedish</li>
-						<li><input type="checkbox" name="thai" value="cuisine-thai">thai</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-american">american</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-barbecue-bbq">barbecue</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-cajun">cajun & creole</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-chinese">chinese</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-cuban">cuban</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-english">english</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-french">french</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-german">german</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-greek">greek</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-hawaiian">hawaiian</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-hungarian">hungarian</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-indian">indian</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-irish">irish</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-italian">italian</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-japanese">japanese</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-kid-friendly">kid-friendly</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-mediterranean">mediterranean</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-mexican">mexican</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-moroccan">moroccan</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-portuguese">portuguese</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-spanish">spanish</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-southern">southern & soul</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-southwstern">southwestern</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-swedish">swedish</li>
+						<li><input type="checkbox" name="cuisine-type" value="cuisine-thai">thai</li>
 					</ul>
 				</li>
 				<li class="dietary-restrictions">dietary restrictions
