made nav bar sticky

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Side Dishes">side dishes</li>
 						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Snacks">snacks</li>
 						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Soups">soups</li>
-						<li><input type="radio" name="course-type" value="">any</li>
+						<li><input type="radio" name="course-type" value="" checked>any</li>
 					</ul>
 				</li>
 				<li class="cuisine-type">cuisine type
@@ -68,7 +68,7 @@
 						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=403^Paleo">paleo</li>
 						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=390^Pescetarian">pescetarian</li>
 						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=386^Vegan">vegan</li>
-						<li><input type="radio" name="dietary-restrictions" value="">none</li>
+						<li><input type="radio" name="dietary-restrictions" value="" checked>none</li>
 					</ul>
 				</li>
 				<li class="submit"><button>Submit</button></li>
