--- a/index.html
+++ b/index.html
@@ -8,102 +8,67 @@
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 
-<style>
-
-	body {
-	 margin: 0 auto;
-	}
-
-	.wrapper {
-		max-width: 1140px;
-	}
-
-	.main-menu {
-		display: flex;
-		justify-content: space-around;
-	}
-
-	ul {
-		list-style-type: none;
-	}
-
-	.sub-menu {
-		padding-left: 0;
-		display: none;
-	}
-
-	/* .main-menu li:hover {
-		background-color: lightgrey;
-	} */
-
-	.main-menu li:hover .sub-menu {
-		display: block;
-	}
-
-</style>
-
 <body>
-
 	<nav>
-		<form action="">
+		<form action="" class="recipe-search">
 			<ul class="main-menu wrapper">
 				<li class="search-bar"><input type="text" name="search" placeholder="Search for recipes"></li>
 				<li class="course-type">course type
 					<ul class="sub-menu">
-						<li><input type="radio" name="course-type" value="course-Appetizers">appetizers</li>
-						<li><input type="radio" name="course-type" value="course-Beverages">beverages</li>
-						<li><input type="radio" name="course-type" value="course-Breads">breads</li>
-						<li><input type="radio" name="course-type" value="course-Breakfast and Brunch">breakfast and brunch</li>
-						<li><input type="radio" name="course-type" value="course-Cocktails">cocktails</li>
-						<li><input type="radio" name="course-type" value="course-Condiments and Sauces">condiments and sauces</li>
-						<li><input type="radio" name="course-type" value="course-Desserts">desserts</li>
-						<li><input type="radio" name="course-type" value="course-Lunch">lunch</li>
-						<li><input type="radio" name="course-type" value="course-Main Dishes">main dishes</li>
-						<li><input type="radio" name="course-type" value="course-Salads">salads</li>
-						<li><input type="radio" name="course-type" value="course-Side Dishes">side dishes</li>
-						<li><input type="radio" name="course-type" value="course-Snacks">snacks</li>
-						<li><input type="radio" name="course-type" value="course-Soups">soups</li>
-						<li><input type="radio" name="course-type" value="none">none</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Appetizers">appetizers</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Beverages">beverages</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Breads">breads</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Breakfast and Brunch">breakfast and brunch</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Cocktails">cocktails</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Condiments and Sauces">condiments and sauces</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Desserts">desserts</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Lunch">lunch</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Main Dishes">main dishes</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Salads">salads</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Side Dishes">side dishes</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Snacks">snacks</li>
+						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Soups">soups</li>
+						<li><input type="radio" name="course-type" value="" checked>any</li>
 					</ul>
 				</li>
 				<li class="cuisine-type">cuisine type
 					<ul class="sub-menu">
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-american">american</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-barbecue-bbq">barbecue</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-cajun">cajun & creole</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-chinese">chinese</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-cuban">cuban</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-english">english</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-french">french</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-german">german</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-greek">greek</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-hawaiian">hawaiian</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-hungarian">hungarian</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-indian">indian</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-irish">irish</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-italian">italian</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-japanese">japanese</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-kid-friendly">kid-friendly</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-mediterranean">mediterranean</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-mexican">mexican</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-moroccan">moroccan</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-portuguese">portuguese</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-spanish">spanish</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-southern">southern & soul</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-southwstern">southwestern</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-swedish">swedish</li>
-						<li><input type="checkbox" name="cuisine-type" value="cuisine-thai">thai</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-american">american</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-barbecue-bbq">barbecue</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cajun">cajun & creole</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-chinese">chinese</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuban">cuban</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-english">english</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-french">french</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-german">german</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-greek">greek</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hawaiian">hawaiian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hungarian">hungarian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-indian">indian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-irish">irish</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-italian">italian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-japanese">japanese</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-kid-friendly">kid-friendly</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mediterranean">mediterranean</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mexican">mexican</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-moroccan">moroccan</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-portuguese">portuguese</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-spanish">spanish</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southern">southern & soul</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southwstern">southwestern</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-swedish">swedish</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-thai">thai</li>
 					</ul>
 				</li>
 				<li class="dietary-restrictions">dietary restrictions
 					<ul class="sub-menu">
-						<li><input type="radio" name="dietary-restrictions" value="Lacto vegetarian">lacto vegetarian</li>
-						<li><input type="radio" name="dietary-restrictions" value="Lacto-ovo vegetarian">lacto-ovo vegetarian</li>
-						<li><input type="radio" name="dietary-restrictions" value="Ovo vegetarian">ovo vegetarian</li>
-						<li><input type="radio" name="dietary-restrictions" value="Paleo">paleo</li>
-						<li><input type="radio" name="dietary-restrictions" value="Pescetarian">pescetarian</li>
-						<li><input type="radio" name="dietary-restrictions" value="Vegan">vegan</li>
-						<li><input type="radio" name="dietary-restrictions" value="none">none</li>
+						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=388^Lacto vegetarian">lacto vegetarian</li>
+						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=387^Lacto-ovo vegetarian">lacto-ovo vegetarian</li>
+						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=389^Ovo vegetarian">ovo vegetarian</li>
+						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=403^Paleo">paleo</li>
+						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=390^Pescetarian">pescetarian</li>
+						<li><input type="radio" name="dietary-restrictions" value="&allowedDiet[]=386^Vegan">vegan</li>
+						<li><input type="radio" name="dietary-restrictions" value="" checked>none</li>
 					</ul>
 				</li>
 				<li class="submit"><button>Submit</button></li>
@@ -112,7 +77,7 @@
 		</form>
 	</nav>
 
-	<div class="recipeList">
+	<div class="recipeList wrapper">
 
 	</div>
 
@@ -122,27 +87,6 @@
 </html>
 
 
-
-<!-- 
-
-// values for course types are as follows: 
-// course^course-Main Dishes 
-// course^course-Desserts
-// course^course-Side Dishes 
-// course^course-Appetizers 
-// course^course-Salads 
-// course^course-Breakfast and Brunch 
-// course^course-Breads 
-// course^course-Soups 
-// course^course-Beverages 
-// course^course-Condiments and Sauces 
-// course^course-Cocktails
-// course^course-Snacks 
-// course^course-Lunch
-	
-
-
--->
 <!-- Customer enters their required search parameters (ingredients, course type, cusisine type, dietary restrictions) -->
 	<!-- Example of a search for chicken and broccoli / Main dish / Italian / No dietary restriction -->
 		<!-- Do an API call for all recipes with chicken and broccoli -->
