--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
 				</li>
 				<li class="cuisine-type">cuisine type
 					<ul class="sub-menu">
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-american">american</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-barbecue-bbq">barbecue</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-cajun">cajun & creole</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-chinese">chinese</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-cuban">cuban</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-english">english</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-french">french</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-german">german</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-greek">greek</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-hawaiian">hawaiian</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-hungarian">hungarian</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-indian">indian</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-irish">irish</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-italian">italian</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-japanese">japanese</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-kid-friendly">kid-friendly</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-mediterranean">mediterranean</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-mexican">mexican</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-moroccan">moroccan</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-portuguese">portuguese</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-spanish">spanish</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-southern">southern & soul</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-southwstern">southwestern</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-swedish">swedish</li>
-						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuisine-thai">thai</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-american">american</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-barbecue-bbq">barbecue</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cajun">cajun & creole</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-chinese">chinese</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuban">cuban</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-english">english</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-french">french</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-german">german</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-greek">greek</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hawaiian">hawaiian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hungarian">hungarian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-indian">indian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-irish">irish</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-italian">italian</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-japanese">japanese</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-kid-friendly">kid-friendly</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mediterranean">mediterranean</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mexican">mexican</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-moroccan">moroccan</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-portuguese">portuguese</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-spanish">spanish</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southern">southern & soul</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southwstern">southwestern</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-swedish">swedish</li>
+						<li><input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-thai">thai</li>
 					</ul>
 				</li>
 				<li class="dietary-restrictions">dietary restrictions
