used flexbox grid on results div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<nav>
 		<form action="" class="recipe-search">
 			<ul class="main-menu wrapper">
-				<li class="search-bar"><input type="text" name="search" placeholder="Search for recipes"></li>
+				<li class="search-bar"><input type="text" name="search" placeholder="Search for recipes/ingredients"></li>
 				<li class="course-type">course type
 					<ul class="sub-menu">
 						<li><input type="radio" name="course-type" value="&allowedCourse[]=course^course-Appetizers">appetizers</li>
@@ -71,7 +71,7 @@
 						<li><input type="radio" name="dietary-restrictions" value="" checked>none</li>
 					</ul>
 				</li>
-				<li class="submit"><button>Submit</button></li>
+				<li class="submit"><button>Search</button></li>
 			</ul>
 
 		</form>
