added show previous button as well

--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
 
 		</form>
 	</nav>
-
-	<div class="recipeList wrapper">
+	<div class="recipe-list wrapper">
 
 	</div>
-	<div class="show-more-container">
+	<div class="page-results-container wrapper">
 		
 	</div>
 	<script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
