--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<nav>
 		<form action="" class="recipe-search">
 			<ul class="main-menu wrapper">
-				
-				<li class="search-bar"><input type="text" name="search" placeholder="Search for recipes/ingredients"></li>
+
+				<li class="search-bar"><input type="text" name="search" placeholder="Search for recipes/ingredients" required></li>
 
 				<li class="course-type">course type
 					<ul class="sub-menu">
@@ -70,8 +70,8 @@
 							<label for="soups">soups</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="" checked id="">
-							<label for="">any</label>
+							<input type="radio" name="course-type" value="" checked id="any">
+							<label for="any">any</label>
 						</li>
 					</ul>
 				</li>
@@ -208,8 +208,8 @@
 							<label for="vegan">vegan</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="" checked id="">
-							<label for="">none</label>
+							<input type="radio" name="dietary-restrictions" value="" checked id="none">
+							<label for="none">none</label>
 						</li>
 					</ul>
 				</li>
@@ -219,6 +219,23 @@
 			</ul>
 		</form>
 	</nav>
+
+	<section class="main-welcome-page">
+		<video autoplay muted loop id="myVideo">
+			<source src="./assets/background.mp4" type="video/mp4">
+		</video>	
+		<div class="overlay"></div>
+		<div class="content">
+			<!-- <input type="search"> -->
+		<form action="" class="recipe-search">
+			<input type="text" name="search" placeholder="Search for recipes/ingredients" required>
+			<span><class="submit"><button>Search</button></span>
+		</form>
+
+			<!-- Use a button to pause/play the video with JavaScript -->
+			<!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
+		</div>
+	</section>
 
 	<section class="recipe-list wrapper">
 
