changed pagination method

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 							<label for="soups">soups</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="" checked id="">
-							<label for="">any</label>
+							<input type="radio" name="course-type" value="" checked id="any">
+							<label for="any">any</label>
 						</li>
 					</ul>
 				</li>
@@ -208,8 +208,8 @@
 							<label for="vegan">vegan</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="" checked id="">
-							<label for="">none</label>
+							<input type="radio" name="dietary-restrictions" value="" checked id="none">
+							<label for="none">none</label>
 						</li>
 					</ul>
 				</li>
