--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 
 <body>
-	<nav>
+
+	<!-- <header class="main-welcome-page">
+		<video autoplay muted loop id="myVideo">
+			<source src="./assets/background.mp4" type="video/mp4">
+		</video>	
+		<div class="overlay"></div>
+		<div class="content">
+			<form action="" class="initial-search">
+				<input type="text" name="search" placeholder="Search for recipes/ingredients" required>
+				<span class="submit"><button>Search</button></span>
+			</form>
+		</div>
+	</header> -->
+
+	<nav class="nav-form">
 		<form action="" class="recipe-search">
 			<ul class="main-menu wrapper">
 
@@ -219,23 +233,6 @@
 			</ul>
 		</form>
 	</nav>
-
-	<section class="main-welcome-page">
-		<video autoplay muted loop id="myVideo">
-			<source src="./assets/background.mp4" type="video/mp4">
-		</video>	
-		<div class="overlay"></div>
-		<div class="content">
-			<!-- <input type="search"> -->
-		<form action="" class="recipe-search">
-			<input type="text" name="search" placeholder="Search for recipes/ingredients" required>
-			<span><class="submit"><button>Search</button></span>
-		</form>
-
-			<!-- Use a button to pause/play the video with JavaScript -->
-			<!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
-		</div>
-	</section>
 
 	<section class="recipe-list wrapper">
 
