front page styling and recipe hovers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Food Project</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 
@@ -18,7 +19,8 @@
 		<div class="content">
 			<form action="" class="initial-search">
 				<input type="text" name="search" class="initial-search-box" placeholder="Search for recipes/ingredients" required>
-				<span class="submit"><button>Search</button></span>
+				<i class="fas fa-search"></i>
+				<!-- <span class="submit"><button>Search</button></span> -->
 			</form>
 		</div>
 	</header>
