--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<li class="search-bar"><input type="text" name="search" class="recipe-search-box" placeholder="Search for recipes/ingredients" required></li>
 
-				<li class="course-type">course type
+				<li class="course-type main-menu-options">course type
 					<ul class="sub-menu">
 						<li>
 							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Appetizers" id="appetizers">
@@ -90,7 +90,7 @@
 					</ul>
 				</li>
 
-				<li class="cuisine-type">cuisine type
+				<li class="cuisine-type main-menu-options">cuisine type
 					<ul class="sub-menu">
 						<li>
 							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-american" id="american">
@@ -195,7 +195,7 @@
 					</ul>
 				</li>
 
-				<li class="dietary-restrictions">dietary restrictions
+				<li class="dietary-restrictions main-menu-options">dietary restrictions
 					<ul class="sub-menu">
 						<li>
 							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=388^Lacto vegetarian" id="lacto vegetarian">
@@ -228,7 +228,7 @@
 					</ul>
 				</li>
 
-				<li class="submit"><button>Search</button></li>
+				<li class="submit main-menu-options"><button>Search</button></li>
 
 			</ul>
 		</form>
